--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,22 @@ body{
 
 main{
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px 0.473;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+}
+
+h1{
+    font-size: 2em;
+    color: rgb(0, 60, 255);
+}
+
+h2{
+    font-size: 1.5em;
+    color: rgb(0, 60, 255);
+}
+
+img.lado{
+    float: right;
 }
